ecmascript/parser/tests/typescript-errors/tsc/internalModules/moduleBody/invalidModuleWithStatementsOfEveryKind/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/internalModules/moduleBody/invalidModuleWithStatementsOfEveryKind/input.ts:4:12
  |
4 |     public class A { s: string }
  |            ^^^^^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/internalModules/moduleBody/invalidModuleWithStatementsOfEveryKind/input.ts:4:5
  |
4 |     public class A { s: string }
  |     ^^^^^^

error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/internalModules/moduleBody/invalidModuleWithStatementsOfEveryKind/input.ts:4:5
  |
4 |     public class A { s: string }
  |     ^^^^^^

